# ocelotmc

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/: synced_registries.json
ocelot/: Cargo.toml
ocelot-data/: Cargo.toml
ocelot-data/src/: lib.rs
ocelot-macros/: Cargo.toml
ocelot-macros/src/: lib.rs
ocelot-nbt/: Cargo.toml
ocelot-nbt/src/: bigtest-network.nbt  lib.rs
ocelot-protocol/: Cargo.toml
ocelot-protocol/src/: buffer.rs  lib.rs  types.rs
ocelot-protocol/src/codec/: mod.rs
ocelot-protocol/src/packet/: mod.rs  types.rs
ocelot-protocol/src/packet/configuration/: clientbound.rs  mod.rs  serverbound.rs
ocelot-protocol/src/packet/handshaking/: mod.rs  serverbound.rs
ocelot-protocol/src/packet/login/: clientbound.rs  mod.rs  serverbound.rs
ocelot-protocol/src/packet/play/: clientbound.rs  mod.rs  serverbound.rs
ocelot-protocol/src/packet/status/: clientbound.rs  mod.rs  serverbound.rs
ocelot-types/: Cargo.toml
ocelot-types/src/: lib.rs  text.rs
ocelot/src/: main.rs
