[workspace]
members = [ "ocelot",  "ocelot-data", "ocelot-macros", "ocelot-nbt", "ocelot-protocol"]
resolver = "3"

[workspace.dependencies]
ocelot-macros = { path = "ocelot-macros" }
ocelot-protocol = { path = "ocelot-protocol" }
ocelot-data = { path = "ocelot-data" }

proc-macro-crate = "3.4.0"
proc-macro2 = "1.0.105"
syn = "2.0.114"
quote = "1.0.43"
darling = "0.23.0"

uuid = "1.19.0"
serde = "1.0.228"
serde_json = "1.0.149"

tokio = "1.49.0"

fastnbt = "2.6.0"

reqwest = "0.13.1"
rand = "0.9.2"
openssl = "0.10.75"
sha1 = "0.10.6"
num-bigint = "0.4.6"
