[package]
name = "ocelot-protocol"
version.workspace = true
edition.workspace = true

[dependencies]
ocelot-macros.workspace = true
ocelot-types.workspace = true

uuid = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

bitflags.workspace = true
