[package]
name = "ocelot"
version.workspace = true
edition.workspace = true

[dependencies]
ocelot-protocol.workspace = true
ocelot-data.workspace = true
ocelot-types.workspace = true

tokio = { workspace = true, features = ["net", "io-util", "rt-multi-thread", "macros"] }

uuid.workspace = true

reqwest = { workspace = true, features = ["query"] }
rand.workspace = true
openssl.workspace = true
sha1.workspace = true
num-bigint.workspace = true

serde_json.workspace = true
